// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon basic renders 1`] = `
<svg
  className="events-none icon"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 18,
      "width": 18,
    }
  }
>
  <use
    xlinkHref="#icon-bike"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`Icon extra props renders 1`] = `
<svg
  className="events-none icon color-red"
  data-test="alert-icon"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 18,
      "width": 18,
    }
  }
>
  <use
    xlinkHref="#icon-alert"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`Icon inline renders 1`] = `
<svg
  className="events-none icon mr3 color-green inline-block align-t"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 18,
      "width": 18,
    }
  }
>
  <use
    xlinkHref="#icon-check"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`Icon special size with classes renders 1`] = `
<svg
  className="events-none icon h36 w36"
  data-test="alert-icon"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 18,
      "width": 18,
    }
  }
>
  <use
    xlinkHref="#icon-alert"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`Icon special size with styles renders 1`] = `
<svg
  className="events-none icon"
  data-test="alert-icon"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 36,
      "width": 36,
    }
  }
>
  <use
    xlinkHref="#icon-alert"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;
